dev_ws/log/build_2022-07-21_14-40-36/mds_rover/stderr.log
  File "/home/giacomo/Desktop/Unmanned Vehicles/UV prj/dev_ws/install/mds_rover/lib/python3.8/site-packages/mds_rover/rover.py", line 47
    def main(args=None):
    ^
SyntaxError: invalid syntax

